# avm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Tupfile  Tuprules.tup  astylerc
build-lib/: Tupfile  tup.config
build-tool-debug/: tup.config
build-tool-release/: tup.config
configs/: lib.config  tool-debug.config  tool-release.config
src/: asprintf.c  asprintf.h  asprintf.h.gch  avm.c  avm.h  avm.h.gch  avm_debug.c  avm_def.h  avm_eval.c  avm_parse.c  avm_stringify.c  avm_util.c  avm_util.h  avm_util.h.gch
test/: large_ram.avm  longloop.avm  t1.avm  t2.avm  t3.avm
